# MTIA

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: main.py
backend/engines/: enrichment.py  exif_engine.py
backend/models/: fusion_model.py  nlp_model.py  vision_model.py
backend/utils/: logger.py
frontend/: app.js  index.html  styles.css
tests/: test_api.py  test_models.py
